force-app/main/default/objects/ssot__WebEventEngagementSummary__dlm/fields/ssot__DeviceTypeConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceTypeConfigurationId__c</fullName>
    <label>Device Type Configuration Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceTypeConfigurationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>