force-app/main/default/objects/ssot__WebEventEngagementSummary__dlm/fields/ssot__WebEventEngagementSummaryDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebEventEngagementSummaryDateTime__c</fullName>
    <label>Web Event Engagement Summary Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebEventEngagementSummaryDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>