force-app/main/default/objects/ssot__WebEventEngagementSummary__dlm/fields/ssot__WebsiteEventId__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteEventId__c</fullName>
    <label>Website Event Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteEventId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>