force-app/main/default/objects/ssot__WebEventEngagementSummary__dlm/fields/ssot__WebsiteEventValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteEventValueAmount__c</fullName>
    <label>Website Event Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteEventValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>