force-app/main/default/objects/ssot__WebEventEngagementSummary__dlm/fields/ssot__WebsiteUniqueEventsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteUniqueEventsCount__c</fullName>
    <label>Website Unique Events</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteUniqueEventsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>